--- a/src/cvh-icons/Cargo.toml
+++ b/src/cvh-icons/Cargo.toml
@@ -61,6 +61,9 @@ mime_guess = "2"
 dirs = "5"
 hostname = "0.4"
 
+[dev-dependencies]
+tempfile = "3"
+
 [profile.release]
 lto = true
 codegen-units = 1
