--- a/src/cvh-icons/Cargo.toml
+++ b/src/cvh-icons/Cargo.toml
@@ -24,7 +24,7 @@ image = { version = "0.25", default-features = false, features = ["png", "jpeg",
 resvg = "0.44"
 
 # Sandboxing
-nix = { version = "0.29", features = ["process", "user", "fs"] }
+nix = { version = "0.29", features = ["process", "user", "fs", "poll"] }
 
 # Event loop
 calloop = "0.14"
@@ -37,6 +37,7 @@ kdl = "4"
 # IPC / D-Bus
 zbus = "5"
 bincode = "1"
+serde_json = "1"
 
 # System info
 sysinfo = "0.32"
