added nicer GRUB theme

--- a/iso/grub/grub.cfg
+++ b/iso/grub/grub.cfg
@@ -13,14 +13,14 @@ insmod png
 # Set terminal
 terminal_output gfxterm
 
-# Load CVH Nordic theme
+# Load Tela theme
 # Try multiple paths for compatibility
-if [ -f /boot/grub/themes/cvh-nordic/theme.txt ]; then
-    set theme=/boot/grub/themes/cvh-nordic/theme.txt
-elif [ -f $prefix/themes/cvh-nordic/theme.txt ]; then
-    set theme=$prefix/themes/cvh-nordic/theme.txt
-elif [ -f ($root)/grub/themes/cvh-nordic/theme.txt ]; then
-    set theme=($root)/grub/themes/cvh-nordic/theme.txt
+if [ -f /boot/grub/themes/tela/theme.txt ]; then
+    set theme=/boot/grub/themes/tela/theme.txt
+elif [ -f $prefix/themes/tela/theme.txt ]; then
+    set theme=$prefix/themes/tela/theme.txt
+elif [ -f ($root)/grub/themes/tela/theme.txt ]; then
+    set theme=($root)/grub/themes/tela/theme.txt
 fi
 export theme
 
